Acrescentado o excluir lógico

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(04_DBSimulator C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(04_DBSimulator main.c listaDuplamenteLigada.h listaDuplamenteLigada.c utils.h arrayList.h arrayList.c)
+add_executable(04_DBSimulator main.c listaDuplamenteLigada.h listaDuplamenteLigada.c utils.h arrayList.h arrayList.c arvoreBinaria.h arvoreBinaria.c)
